// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SelectField /> > should allow arbitrary values 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable focused multiple"
    id="junipero-select-field-_r_2b_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_2b_-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 4
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_2b_-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_2b_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow arbitrary values with searchable option 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable"
    id="junipero-select-field-_r_5p_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_5p_-toggle"
    >
      <input
        id="junipero-select-field-_r_5p_-field"
        readonly=""
        type="text"
        value="Item 3"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to be used with a FieldControl 1`] = `
<div>
  <label
    class="junipero label invalid"
    for="name"
  >
    Name
  </label>
  <div
    class="junipero dropdown select-field dirty invalid searchable"
    id="name"
  >
    <div
      class="field dropdown-toggle"
      id="name-toggle"
    >
      <input
        id="name-field"
        readonly=""
        type="text"
        value="Linda"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="junipero abstract invalid"
  >
    Enter your name
  </div>
</div>
`;

exports[`<SelectField /> > should allow to clear a single value 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable"
    id="junipero-select-field-_r_d_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_d_-toggle"
    >
      <input
        id="junipero-select-field-_r_d_-field"
        readonly=""
        type="text"
        value="Item 1"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to clear a single value 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable empty focused"
    id="junipero-select-field-_r_d_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_d_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_d_-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_d_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to clear multiple values at once 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable focused multiple"
    id="junipero-select-field-_r_p_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_p_-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_p_-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_p_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to clear multiple values at once 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable empty focused multiple"
    id="junipero-select-field-_r_p_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_p_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_p_-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_p_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to delete items when hitting backspace 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable focused multiple"
    id="junipero-select-field-_r_2j_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_2j_-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 4
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_2j_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_2j_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_2j_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_2j_-items-_r_2o_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to delete items when hitting backspace 2`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable focused multiple"
    id="junipero-select-field-_r_2j_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_2j_-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_2j_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_2j_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_2j_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_2j_-items-_r_2o_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to delete items when hitting backspace 3`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable focused multiple"
    id="junipero-select-field-_r_2j_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_2j_-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_2j_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_2j_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_2j_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_2j_-items-_r_2o_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to delete items when hitting backspace 4`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable focused multiple"
    id="junipero-select-field-_r_2j_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_2j_-toggle"
    >
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_2j_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_2j_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_2j_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_2j_-items-_r_2o_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to delete items when hitting backspace 5`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable focused multiple"
    id="junipero-select-field-_r_2j_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_2j_-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_2j_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_2j_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_2j_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_2j_-items-_r_2o_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to delete items when hitting backspace 6`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable focused multiple"
    id="junipero-select-field-_r_2j_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_2j_-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_2j_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_2j_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_2j_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_2j_-items-_r_2o_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to load more data on scroll > After scroll 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_4n_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_4n_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_4n_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_4n_-field"
        placeholder="Type a name"
        role="combobox"
        size="11"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_4n_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_4s_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_4t_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_4u_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_4v_"
            tabindex="0"
          >
            <a>
              Item 4
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_50_"
            tabindex="0"
          >
            <a>
              Item 5
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_51_"
            tabindex="0"
          >
            <a>
              Item 6
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_52_"
            tabindex="0"
          >
            <a>
              Item 7
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_53_"
            tabindex="0"
          >
            <a>
              Item 8
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_54_"
            tabindex="0"
          >
            <a>
              Item 9
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_55_"
            tabindex="0"
          >
            <a>
              Item 10
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_57_"
            tabindex="0"
          >
            <a>
              Item 11
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_58_"
            tabindex="0"
          >
            <a>
              Item 12
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_59_"
            tabindex="0"
          >
            <a>
              Item 13
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_5a_"
            tabindex="0"
          >
            <a>
              Item 14
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_5b_"
            tabindex="0"
          >
            <a>
              Item 15
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_5c_"
            tabindex="0"
          >
            <a>
              Item 16
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_5d_"
            tabindex="0"
          >
            <a>
              Item 17
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_5e_"
            tabindex="0"
          >
            <a>
              Item 18
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_5f_"
            tabindex="0"
          >
            <a>
              Item 19
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_5g_"
            tabindex="0"
          >
            <a>
              Item 20
            </a>
          </li>
          <div
            class="load-more"
          >
            <li
              class="junipero dropdown-item no-more-options"
              id="junipero-select-field-_r_4n_-items-_r_56_"
              tabindex="0"
            >
              🎉 No more options
            </li>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to load more data on scroll > Before scroll 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_4n_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_4n_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_4n_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_4n_-field"
        placeholder="Type a name"
        role="combobox"
        size="11"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_4n_-items"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_4s_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_4t_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_4u_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_4v_"
            tabindex="0"
          >
            <a>
              Item 4
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_50_"
            tabindex="0"
          >
            <a>
              Item 5
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_51_"
            tabindex="0"
          >
            <a>
              Item 6
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_52_"
            tabindex="0"
          >
            <a>
              Item 7
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_53_"
            tabindex="0"
          >
            <a>
              Item 8
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_54_"
            tabindex="0"
          >
            <a>
              Item 9
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_55_"
            tabindex="0"
          >
            <a>
              Item 10
            </a>
          </li>
          <div
            class="load-more"
          />
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to load more data on scroll > During scroll 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_4n_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_4n_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_4n_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_4n_-field"
        placeholder="Type a name"
        role="combobox"
        size="11"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu loading"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_4n_-items"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_4s_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_4t_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_4u_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_4v_"
            tabindex="0"
          >
            <a>
              Item 4
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_50_"
            tabindex="0"
          >
            <a>
              Item 5
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_51_"
            tabindex="0"
          >
            <a>
              Item 6
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_52_"
            tabindex="0"
          >
            <a>
              Item 7
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_53_"
            tabindex="0"
          >
            <a>
              Item 8
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_54_"
            tabindex="0"
          >
            <a>
              Item 9
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4n_-items-_r_55_"
            tabindex="0"
          >
            <a>
              Item 10
            </a>
          </li>
          <div
            class="load-more"
          >
            <li
              class="junipero dropdown-item loader"
              id="junipero-select-field-_r_4n_-items-_r_56_"
              tabindex="0"
            >
              <div
                class="junipero spinner primary small"
              />
              Loading more options...
            </li>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to render without a placeholder 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable empty"
    id="junipero-select-field-_r_8_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_8_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_8_-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_8_-field"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to reset the field 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable"
    id="junipero-select-field-_r_16_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_16_-toggle"
    >
      <input
        id="junipero-select-field-_r_16_-field"
        readonly=""
        type="text"
        value="David"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to reset the field 2`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable"
    id="junipero-select-field-_r_16_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_16_-toggle"
    >
      <input
        id="junipero-select-field-_r_16_-field"
        readonly=""
        type="text"
        value="John"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to search for an existing value 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_1p_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_1p_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_1p_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_1p_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value="Item 3"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_1p_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_1p_-items-_r_1u_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to search for an existing value 2`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_1p_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_1p_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_1p_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_1p_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_1p_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_1p_-items-_r_1u_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_1p_-items-_r_21_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_1p_-items-_r_22_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to search for an external value 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_23_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_23_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_23_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_23_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value="Item"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_23_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_23_-items-_r_28_"
            tabindex="0"
          >
            <a>
              Item 4
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to search for an external value 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable focused"
    id="junipero-select-field-_r_23_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_23_-toggle"
    >
      <input
        id="junipero-select-field-_r_23_-field"
        readonly=""
        type="text"
        value="Item 4"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to use object options and display custom titles on a controlled field 1`] = `
<div>
  <p>
    Value: 
    item-3
  </p>
  <div
    class="junipero dropdown select-field dirty valid searchable"
    id="junipero-select-field-_r_2v_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_2v_-toggle"
    >
      <input
        id="junipero-select-field-_r_2v_-field"
        readonly=""
        type="text"
        value="Item 3"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should be invalid if validation fails 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty invalid searchable"
    id="junipero-select-field-_r_u_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_u_-toggle"
    >
      <input
        id="junipero-select-field-_r_u_-field"
        readonly=""
        type="text"
        value="Item 1"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should correctly update state values 1`] = `
<div>
  <label
    class="junipero label info"
  >
    Test
  </label>
  <div
    class="junipero text-field dirty valid"
  >
    <input
      class="field"
      id="textfield"
      placeholder="Test"
      type="text"
      value="Test123"
    />
  </div>
  <div
    class="junipero dropdown select-field dirty valid searchable"
    id="selectfield"
  >
    <div
      class="field dropdown-toggle"
      id="selectfield-toggle"
    >
      <input
        id="selectfield-field"
        readonly=""
        type="text"
        value="Item 3"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not allow to change value when disabled 1`] = `
<div>
  <div
    class="junipero dropdown disabled select-field pristine valid searchable"
    id="junipero-select-field-_r_1k_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_1k_-toggle"
    >
      <input
        id="junipero-select-field-_r_1k_-field"
        readonly=""
        type="text"
        value="Marc"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not remove field previous values while hitting backspace, if search isnt empty 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable focused multiple"
    id="junipero-select-field-_r_2p_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_2p_-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_2p_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_2p_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value="Item"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_2p_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_2p_-items-_r_2u_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not remove field previous values while hitting backspace, if search isnt empty 2`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable focused multiple"
    id="junipero-select-field-_r_2p_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_2p_-toggle"
    >
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_2p_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_2p_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_2p_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_2p_-items-_r_2u_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not toggle on click if disabled > opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_3v_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_3v_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_3v_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_3v_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_3v_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_3v_-items-_r_44_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_3v_-items-_r_45_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_3v_-items-_r_46_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not toggle on click if disabled > still opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_3v_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_3v_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_3v_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_3v_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_3v_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_3v_-items-_r_44_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_3v_-items-_r_45_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_3v_-items-_r_46_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not toggle on click if searchable > opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_47_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_47_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_47_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_47_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_47_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_47_-items-_r_4c_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_47_-items-_r_4d_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_47_-items-_r_4e_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not toggle on click if searchable > still opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_47_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_47_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_47_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_47_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_47_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_47_-items-_r_4c_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_47_-items-_r_4d_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_47_-items-_r_4e_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should render 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_0_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_0_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_0_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_0_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_0_-items"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_0_-items-_r_5_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_0_-items-_r_6_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_0_-items-_r_7_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should render multiple values 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable focused multiple"
    id="junipero-select-field-_r_i_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_i_-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_i_-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_i_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should render multiple values 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable focused multiple"
    id="junipero-select-field-_r_i_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_i_-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_i_-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_i_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should render multiple values 3`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable focused multiple"
    id="junipero-select-field-_r_i_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_i_-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 3
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_i_-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_i_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should select value with keyboard > closed 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable"
    id="junipero-select-field-_r_5h_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_5h_-toggle"
    >
      <input
        id="junipero-select-field-_r_5h_-field"
        readonly=""
        type="text"
        value="Item 2"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should select value with keyboard > opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
    id="junipero-select-field-_r_5h_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_5h_-toggle"
    >
      <input
        aria-activedescendant="junipero-select-field-_r_5h_-items-_r_5n_"
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_5h_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_5h_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_5h_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_5h_-items-_r_5m_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item active"
            id="junipero-select-field-_r_5h_-items-_r_5n_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_5h_-items-_r_5o_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on click if enabled > closed 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_3f_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_3f_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_3f_-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_3f_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on click if enabled > opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_3f_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_3f_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_3f_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_3f_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_3f_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_3f_-items-_r_3k_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_3f_-items-_r_3l_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_3f_-items-_r_3m_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on click if not searchable > closed 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid empty"
    id="junipero-select-field-_r_3n_"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-_r_3n_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_3n_-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        disabled=""
        id="junipero-select-field-_r_3n_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on click if not searchable > opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid empty"
    id="junipero-select-field-_r_3n_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_3n_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_3n_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        disabled=""
        id="junipero-select-field-_r_3n_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_3n_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_3n_-items-_r_3s_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_3n_-items-_r_3t_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_3n_-items-_r_3u_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on keyboard if enabled > back opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_4f_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_4f_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_4f_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_4f_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_4f_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4f_-items-_r_4k_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4f_-items-_r_4l_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4f_-items-_r_4m_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on keyboard if enabled > closed 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_4f_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_4f_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_4f_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_4f_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_4f_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4f_-items-_r_4k_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4f_-items-_r_4l_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4f_-items-_r_4m_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on keyboard if enabled > opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-_r_4f_"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-_r_4f_-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-_r_4f_-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-_r_4f_-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-_r_4f_-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4f_-items-_r_4k_"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4f_-items-_r_4l_"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-_r_4f_-items-_r_4m_"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;
